@@ -13,7 +13,7 @@ import ru.practicum.error.exception.*;
 import ru.practicum.error.model.ApiError;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -28,140 +28,123 @@ public class ErrorHandler {
     public ApiError handleBadRequestsException(Exception e) {
         log.warn(e.getMessage(), e);
 
-        String errorMessage = "";
-        List<String> errors = new ArrayList<>();
+        String message = "";
+        List<String> errors = Collections.emptyList();
         String reason = "";
         Map<String, Object> context = null;
 
         if (e instanceof MethodArgumentNotValidException ex) {
             errors = ex.getBindingResult().getFieldErrors().stream()
-                    .map(fieldError -> String.format("Field '%s': %s", fieldError.getField(),
-                            fieldError.getDefaultMessage()))
+                    .map(error -> "Field '%s': %s".formatted(error.getField(), error.getDefaultMessage()))
                     .toList();
-
             context = Map.of("invalidFieldsCount", errors.size());
-        } else if (e instanceof MissingServletRequestParameterException ex) {
-            errorMessage = String.format("Required parameter '%s' is missing", ex.getParameterName());
-            reason = "MissingServletRequestParameterException";
-
-            context = Map.of("missingParameter", ex.getParameterName());
-        } else if (e instanceof ValidationException ex) {
-            errorMessage = ex.getMessage();
-            reason = "ValidationException";
-            try {
-                String[] parts = errorMessage.split(":");
-                if (parts.length > 1) {
-                    context = Map.of("entityId", parts[1].trim());
-                    errorMessage = parts[0].trim();
-                } else {
-                    // Если сообщение не содержит ":", добавление всего сообщения в контекст
-                    context = Map.of("errorMessage", errorMessage);
-                }
-            } catch (Exception ignored) {
-                // В случае ошибки также добавление всего сообщения в контекст
-                context = Map.of("errorMessage", errorMessage);
-            }
         }
-        return ApiError.builder()
-                .errors(errors)
-                .message(errorMessage)
-                .reason(reason)
-                .status(HttpStatus.BAD_REQUEST.name())
-                .localDateTime(LocalDateTime.now())
-                .context(context)
-                .build();
+        else if (e instanceof MissingServletRequestParameterException ex) {
+            message = "Required parameter '%s' is missing".formatted(ex.getParameterName());
+            reason = "MissingServletRequestParameterException";
+            context = Map.of("missingParameter", ex.getParameterName());
+        }
+        else if (e instanceof ValidationException ex) {
+            message = ex.getMessage();
+            reason = "ValidationException";
+            context = parseValidationMessage(message);
+        }
+
+        return buildApiError(errors, message, reason, HttpStatus.BAD_REQUEST, context);
     }
 
     @ExceptionHandler
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ApiError handleNotFound(final EntityNotFoundException e) {
+    public ApiError handleNotFound(EntityNotFoundException e) {
         log.warn(e.getMessage(), e);
-        List<String> errors = new ArrayList<>();
-        return ApiError.builder()
-                .errors(errors)
-                .message(e.getMessage())
-                .reason("EntityNotFoundException")
-                .status(HttpStatus.NOT_FOUND.name())
-                .localDateTime(LocalDateTime.now())
-                .build();
-
+        return buildApiError(Collections.emptyList(), e.getMessage(),
+                "EntityNotFoundException", HttpStatus.NOT_FOUND);
     }
 
-    @ExceptionHandler({DuplicateParticipationRequestException.class, InvalidStateException.class,
-            SelfParticipationException.class, DataIntegrityViolationException.class, DuplicateCategoryException.class})
+    @ExceptionHandler({DuplicateParticipationRequestException.class,
+            InvalidStateException.class,
+            SelfParticipationException.class,
+            DataIntegrityViolationException.class,
+            DuplicateCategoryException.class})
     @ResponseStatus(HttpStatus.CONFLICT)
-    public ApiError handleConflict(final Exception e) {
+    public ApiError handleConflict(Exception e) {
         log.warn(e.getMessage(), e);
-        String errorMessage;
-        List<String> errors = new ArrayList<>();
-        String reason;
-        Map<String, Object> context;
 
-        switch (e) {
-            case DuplicateParticipationRequestException ex -> {
-                errorMessage = String.format("Duplicate participation request for event with id=%s", ex.getMessage());
-                reason = "DuplicateParticipationRequestException";
-                context = Map.of("event", ex.getMessage());
-            }
-            case InvalidStateException ex -> {
-                errorMessage = String.format("Invalid state: %s", ex.getMessage());
-                reason = "InvalidStateException";
-                context = Map.of("state", ex.getMessage());
-            }
-            case SelfParticipationException ex -> {
-                errorMessage = "User cannot participate in their own event";
-                reason = "SelfParticipationException";
-                context = Map.of("user", ex.getMessage());
-            }
-            case DataIntegrityViolationException ex -> {
-                errorMessage = "Data integrity violation occurred";
-                reason = "DataIntegrityViolationException";
-                String constraintName = extractConstraintName(ex);
-                context = Map.of("constraint", constraintName, "message", ex.getMessage());
-            }
-            case DuplicateCategoryException ex -> {
-                errorMessage = String.format("Category with name '%s' already exists", ex.getMessage());
-                reason = "DuplicateCategoryException";
-                context = Map.of("categoryName", ex.getMessage());
-            }
-            default -> {
-                errorMessage = "Unexpected conflict error";
-                reason = "ConflictException";
-                context = Map.of("message", e.getMessage());
-            }
+        return switch (e) {
+            case DuplicateParticipationRequestException ex ->
+                    buildConflictError("Duplicate participation request for event with id=%s".formatted(ex.getMessage()),
+                            "DuplicateParticipationRequestException",
+                            Map.of("event", ex.getMessage()));
+
+            case InvalidStateException ex ->
+                    buildConflictError("Invalid state: %s".formatted(ex.getMessage()),
+                            "InvalidStateException",
+                            Map.of("state", ex.getMessage()));
+
+            case SelfParticipationException ex ->
+                    buildConflictError("User cannot participate in their own event",
+                            "SelfParticipationException",
+                            Map.of("user", ex.getMessage()));
+
+            case DataIntegrityViolationException ex ->
+                    buildConflictError("Data integrity violation occurred",
+                            "DataIntegrityViolationException",
+                            Map.of("constraint", extractConstraintName(ex),
+                                    "message", ex.getMessage()));
+
+            case DuplicateCategoryException ex ->
+                    buildConflictError("Category with name '%s' already exists".formatted(ex.getMessage()),
+                            "DuplicateCategoryException",
+                            Map.of("categoryName", ex.getMessage()));
+
+            default ->
+                    buildConflictError("Unexpected conflict error",
+                            "ConflictException",
+                            Map.of("message", e.getMessage()));
+        };
+    }
+
+    @ExceptionHandler(ParticipantLimitReachedException.class)
+    @ResponseStatus(HttpStatus.CONFLICT)
+    public ApiError handleParticipantLimitReached(ParticipantLimitReachedException e) {
+        log.warn(e.getMessage(), e);
+        return buildApiError(Collections.emptyList(), e.getMessage(),
+                "ParticipantLimitReachedException", HttpStatus.CONFLICT);
+    }
+
+    private Map<String, Object> parseValidationMessage(String message) {
+        if (message.contains(":")) {
+            String[] parts = message.split(":", 2);
+            return Map.of("entityId", parts[1].trim());
         }
+        return Map.of("errorMessage", message);
+    }
 
+    private String extractConstraintName(DataIntegrityViolationException ex) {
+        Throwable cause = ex.getRootCause();
+        return (cause instanceof ConstraintViolationException cvEx)
+                ? cvEx.getConstraintName()
+                : "Unknown constraint";
+    }
+
+    private ApiError buildApiError(List<String> errors, String message, String reason,
+                                   HttpStatus status, Map<String, Object> context) {
         return ApiError.builder()
                 .errors(errors)
-                .message(errorMessage)
+                .message(message)
                 .reason(reason)
-                .status(HttpStatus.CONFLICT.name())
+                .status(status.name())
                 .localDateTime(LocalDateTime.now())
                 .context(context)
                 .build();
     }
 
-    @ExceptionHandler(ParticipantLimitReachedException.class)
-    @ResponseStatus(HttpStatus.CONFLICT)
-    public ApiError handleParticipantLimitReached(ParticipantLimitReachedException ex) {
-        log.warn(ex.getMessage(), ex);
-        return ApiError.builder()
-                .errors(List.of())
-                .message(ex.getMessage())
-                .reason("ParticipantLimitReachedException")
-                .status(HttpStatus.CONFLICT.name())
-                .localDateTime(LocalDateTime.now())
-                .build();
+    private ApiError buildApiError(List<String> errors, String message,
+                                   String reason, HttpStatus status) {
+        return buildApiError(errors, message, reason, status, null);
     }
 
-
-    private String extractConstraintName(DataIntegrityViolationException ex) {
-        Throwable rootCause = ex.getRootCause();
-        if (rootCause instanceof ConstraintViolationException cvEx) {
-            return cvEx.getConstraintName();
-        }
-        return "Unknown constraint";
+    private ApiError buildConflictError(String message, String reason, Map<String, Object> context) {
+        return buildApiError(Collections.emptyList(), message, reason, HttpStatus.CONFLICT, context);
     }
-
-
 }
